{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 66,
  "lineage": "46e9429c-64fc-ca4b-0b1b-73b64219a9d1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vm_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.197.103.86",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-09-07T01:14:46.819-07:00",
            "id": "projects/my-terraform-1402/regions/us-west1/addresses/affordable-static-ip-west",
            "name": "affordable-static-ip-west",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "my-terraform-1402",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/regions/us-west1/addresses/affordable-static-ip-west",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/zones/us-west1-a/instances/affordable-compute-west1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vm_static_ip_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.227.101.98",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-09-07T01:14:47.249-07:00",
            "id": "projects/my-terraform-1402/regions/us-east1/addresses/affordable-static-ip-east",
            "name": "affordable-static-ip-east",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "my-terraform-1402",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/regions/us-east1/addresses/affordable-static-ip-east",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/zones/us-east1-b/instances/affordable-compute-east1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-07T01:15:09.404-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-terraform-1402/global/firewalls/my-terraform-1402-vpc-allow-http",
            "log_config": [],
            "name": "my-terraform-1402-vpc-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/networks/my-terraform-1402-vpc",
            "priority": 1000,
            "project": "my-terraform-1402",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/firewalls/my-terraform-1402-vpc-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-07T01:15:09.426-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-terraform-1402/global/firewalls/my-terraform-1402-vpc-allow-https",
            "log_config": [],
            "name": "my-terraform-1402-vpc-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/networks/my-terraform-1402-vpc",
            "priority": 1000,
            "project": "my-terraform-1402",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/firewalls/my-terraform-1402-vpc-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-07T01:15:09.343-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-terraform-1402/global/firewalls/my-terraform-1402-vpc-allow-ssh",
            "log_config": [],
            "name": "my-terraform-1402-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/networks/my-terraform-1402-vpc",
            "priority": 1000,
            "project": "my-terraform-1402",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/firewalls/my-terraform-1402-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230814",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/zones/us-east1-b/disks/affordable-compute-east1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-terraform-1402/zones/us-east1-b/instances/affordable-compute-east1",
            "instance_id": "6041134687661079001",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "imAtIaZvlBw=",
            "metadata_startup_script": "#! /bin/bash\n sudo apt install lsb-release\n curl -fsSL https://packages.redis.io/gpg | sudo gpg --dearmor -o /usr/share/keyrings/redis-archive-keyring.gpg\n sudo apt-get update\n sudo apt-get -y install redis\n\n apt update\n apt -y install apache2\n cat \u003c\u003cEOF \u003e /var/www/html/index.html\n \u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eHello World!\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e",
            "name": "affordable-compute-east1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.227.101.98",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/networks/my-terraform-1402-vpc",
                "network_ip": "10.20.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/regions/us-east1/subnetworks/my-terraform-1402-subnet-us-east1",
                "subnetwork_project": "my-terraform-1402"
              }
            ],
            "project": "my-terraform-1402",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/zones/us-east1-b/instances/affordable-compute-east1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh"
            ],
            "tags_fingerprint": "xEi19su0rvw=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_address.vm_static_ip_east",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet-east1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230814",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/zones/us-west1-a/disks/affordable-compute-west1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-terraform-1402/zones/us-west1-a/instances/affordable-compute-west1",
            "instance_id": "1499956261114100185",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "imAtIaZvlBw=",
            "metadata_startup_script": "#! /bin/bash\n sudo apt install lsb-release\n curl -fsSL https://packages.redis.io/gpg | sudo gpg --dearmor -o /usr/share/keyrings/redis-archive-keyring.gpg\n sudo apt-get update\n sudo apt-get -y install redis\n\n apt update\n apt -y install apache2\n cat \u003c\u003cEOF \u003e /var/www/html/index.html\n \u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eHello World!\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e",
            "name": "affordable-compute-west1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.197.103.86",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/networks/my-terraform-1402-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/regions/us-west1/subnetworks/my-terraform-1402-subnet-us-west1",
                "subnetwork_project": "my-terraform-1402"
              }
            ],
            "project": "my-terraform-1402",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/zones/us-west1-a/instances/affordable-compute-west1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh"
            ],
            "tags_fingerprint": "xEi19su0rvw=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_address.vm_static_ip",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet-west1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/my-terraform-1402/global/networks/my-terraform-1402-vpc",
            "mtu": 0,
            "name": "my-terraform-1402-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "my-terraform-1402",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/networks/my-terraform-1402-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-east1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-07T01:15:10.584-07:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/my-terraform-1402/regions/us-east1/subnetworks/my-terraform-1402-subnet-us-east1",
            "ip_cidr_range": "10.20.0.0/24",
            "name": "my-terraform-1402-subnet-us-east1",
            "network": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/networks/my-terraform-1402-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-terraform-1402",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/regions/us-east1/subnetworks/my-terraform-1402-subnet-us-east1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-west1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-07T01:15:11.036-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/my-terraform-1402/regions/us-west1/subnetworks/my-terraform-1402-subnet-us-west1",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "my-terraform-1402-subnet-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/global/networks/my-terraform-1402-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-terraform-1402",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-terraform-1402/regions/us-west1/subnetworks/my-terraform-1402-subnet-us-west1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}